# impak

./: README.md  example.py  pyproject.toml
.github/workflows/: python-publish.yml
docs/: build_docs.bat  impak.html  index.html  search.js
src/impak/: __init__.py  cli.py  decoder.py  differ.py  encoder.py  formats.py
