[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impak"
version = "0.1.2"
description = "Space-efficient patch-based image collection format"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "click>=8.0",
]

[project.scripts]
impak = "impak.cli:cli"

[project.urls]
Homepage = "https://puff-dayo.github.io/impak/impak.html"
Repository = "https://github.com/puff-dayo/impak"

[tool.setuptools.packages.find]
where = ["src"]